metadata/force-app/main/default/objects/CustomName_iYVAE__c/CustomName_iYVAE__c.object-meta.xml
<CustomObject>
    <description>Description_dXkPG</description>
    <label>CustomLabel_cMBGd</label>
    <nameField>
        <label>CustomLabel_cMBGd</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_cMBGds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>