metadata/force-app/main/default/objects/CustomName_iYVAE__c/fields/CustomField_kjMQv__c.field-meta.xml
<CustomField>
    <fullName>CustomField_kjMQv__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldYnyHh</label>
    <length>255</length>
    <type>Text</type>
</CustomField>