metadata/force-app/main/default/objects/CustomName_iYVAE__c/fields/CustomField_rEbrn__c.field-meta.xml
<CustomField>
    <fullName>CustomField_rEbrn__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldkhJUo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>